fix(client): updates for study sets
- remove extra spaces from set's cards during save and import;
- fix with styles for set page, form and learn

--- a/client/src/styles/pages/createset.module.scss
+++ b/client/src/styles/pages/createset.module.scss
@@ -127,6 +127,19 @@
   }
 }
 
+@media screen and (min-width: 425px) {
+  .import {
+    &__structure {
+      flex-direction: row;
+      align-items: flex-end;
+
+      > div {
+        flex-basis: 100%;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   .cards {
     &__block {
