--- a/client/src/styles/pages/learn.module.scss
+++ b/client/src/styles/pages/learn.module.scss
@@ -169,6 +169,15 @@
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .form {
+    &__inner {
+      overflow: hidden;
+      border-radius: 10px;
+    }
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .form {
     &__inner {
