--- a/client/src/styles/pages/set.module.scss
+++ b/client/src/styles/pages/set.module.scss
@@ -74,7 +74,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 1rem;
-      padding: 1.5rem;
+      padding: 1rem;
       border-radius: 10px;
       background-color: var(--color-surface);
       color: var(--color-on-surface);
